Include FMG install logs and distinguish change source
- Config Change alert now includes both direct changes AND FMG install
- Added change_source field: 📦 FMG Install or 👤 Direct
- Updated table and Slack fields to show change source
- Helps identify if change originated from FortiManager or direct user action

--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -12,13 +12,16 @@
 
 [001_Config_Change]
 description = Configuration change detection with detailed before/after tracking
-search = `fortigate_index` `logids_config_change` NOT `logids_fmg_install` \
+search = `fortigate_index` (`logids_config_change` OR `logids_fmg_install`) \
 | `enrich_with_logid_lookup` \
 | eval device = coalesce(devname, "unknown") \
 | eval user = coalesce(user, "system") \
 | eval method = case(logid="0100044546", "CLI", logid="0100044547", "GUI", true(), coalesce(ui, "N/A")) \
 | eval config_path = coalesce(cfgpath, "unknown") \
 | eval config_attr = coalesce(cfgattr, "-") \
+| eval change_source = case( \
+    logid="0100044548" OR logid="0100044549" OR logid="0100044550", "📦 FMG Install", \
+    true(), "👤 Direct") \
 | eval action = case( \
     like(msg, "%added%") OR like(msg, "%create%") OR like(msg, "%new%"), "➕ ADD", \
     like(msg, "%deleted%") OR like(msg, "%remove%") OR like(msg, "%del %"), "🗑️ DELETE", \
@@ -60,7 +63,7 @@ search = `fortigate_index` `logids_config_change` NOT `logids_fmg_install` \
 | eval is_uuid_only_change = if(before_value == "N/A" AND after_value == "N/A", 1, 0) \
 | where is_uuid_only_change = 0 \
 | eval alert_title = "🔧 Config Change [" . action . "]: " . change_type \
-| table _time, device, user, method, action, config_path, before_value, after_value, criticality, alert_title
+| table _time, device, user, method, change_source, action, config_path, before_value, after_value, criticality, alert_title
 
 cron_schedule = * * * * *
 enableSched = 1
@@ -79,7 +82,7 @@ action.slack = 1
 action.slack.param.channel = #security-firewall-alert
 action.slack.param.attachment = none
 action.slack.param.message = $result.alert_title$
-action.slack.param.fields = device,user,method,action,config_path,before_value,after_value,criticality
+action.slack.param.fields = device,user,method,change_source,action,config_path,before_value,after_value,criticality
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
