Add FMG out-of-sync alert (018)
- Created fmg_sync_state_tracker.csv for state tracking
- Added logids_fmg_sync macro with relevant LogIDs
- Implemented 018_FMG_Out_Of_Sync alert with EMS pattern
- Detects: OUT_OF_SYNC, INSTALL_FAILED, SYNC_FAILED states
- Tracks: device, FMG server, sync status, reason, revision
- Slack channel: #network-alerts
- Suppression: 15m per device-FMG pair
- Severity: 4 (Medium-High)

--- a/security_alert/default/macros.conf
+++ b/security_alert/default/macros.conf
@@ -98,6 +98,11 @@ iseval = 0
 definition = (logid=0104043009 OR logid=0104043010 OR logid=0100032011)
 iseval = 0
 
+# Alert 018: FMG Out of Sync
+[logids_fmg_sync]
+definition = (logid=0104043545 OR logid=0100044548 OR logid=0100044549 OR logid=0100044550)
+iseval = 0
+
 # ============================================================
 # Lookup Enrichment Macro
 # ============================================================
