--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -922,3 +922,67 @@ action.slack.param.fields = last_seen,device,formatted_message,urgency
 
 dispatch.rt_backfill = 1
 auto_summarize = 0
+
+[018_FMG_Out_Of_Sync]
+description = FortiManager configuration out of sync detection
+search = `fortigate_index` `logids_fmg_sync` \
+| `enrich_with_logid_lookup` \
+| eval device = coalesce(devname, "unknown") \
+| eval fmg_server = coalesce(fmg_server, remip, "unknown") \
+| eval sync_status = case( \
+    like(msg, "%out of sync%") OR like(msg, "%not synchronized%"), "OUT_OF_SYNC", \
+    like(msg, "%install%failed%"), "INSTALL_FAILED", \
+    like(msg, "%install%success%") OR like(msg, "%synchronized%"), "SYNCHRONIZED", \
+    logid="0104043545", if(like(sync_status, "%fail%") OR like(sync_status, "%error%"), "SYNC_FAILED", "SYNC_OK"), \
+    true(), "UNKNOWN") \
+| eval config_revision = coalesce(config_revision, revision, "-") \
+| eval install_target = coalesce(install_target, adom, vdom, "-") \
+| eval reason = case( \
+    like(msg, "%revision mismatch%"), "📊 Revision Mismatch", \
+    like(msg, "%policy%"), "🔒 Policy Changes", \
+    like(msg, "%object%"), "📦 Object Changes", \
+    like(msg, "%timeout%"), "⏱️ Timeout", \
+    like(msg, "%connection%"), "🔌 Connection Error", \
+    true(), "📋 Config Drift") \
+| eval current_state = if(sync_status="SYNCHRONIZED" OR sync_status="SYNC_OK", "SYNCHRONIZED", "OUT_OF_SYNC") \
+| eval severity = case( \
+    sync_status="INSTALL_FAILED" OR sync_status="SYNC_FAILED", "🔴 CRITICAL", \
+    sync_status="OUT_OF_SYNC", "🟠 HIGH", \
+    true(), "🟢 NORMAL") \
+| eval formatted_message = "FMG: " . fmg_server . " | Status: " . sync_status . " | " . reason . " | Target: " . install_target \
+| rex mode=sed field=formatted_message "s/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/[UUID]/g" \
+| rex mode=sed field=formatted_message "s/\s+/ /g" \
+| eval formatted_message = trim(formatted_message) \
+| stats latest(_time) as _time, latest(*) as * by device, fmg_server \
+| join type=left device fmg_server [ \
+    | inputlookup fmg_sync_state_tracker \
+    | rename state as previous_state ] \
+| eval state_changed = if(isnull(previous_state) OR previous_state!=current_state, 1, 0) \
+| where state_changed=1 \
+| eval state = current_state \
+| outputlookup append=t fmg_sync_state_tracker \
+| where current_state="OUT_OF_SYNC" \
+| eval alert_title = "📡 FMG Out of Sync: " . device . " ↔️ " . fmg_server \
+| table _time, device, fmg_server, sync_status, reason, install_target, config_revision, severity, alert_title
+
+cron_schedule = * * * * *
+enableSched = 1
+realtime_schedule = 1
+dispatch.earliest_time = rt-10m
+dispatch.latest_time = rt
+alert.track = 1
+alert.severity = 4
+alert.digest_mode = 0
+alert.suppress = 1
+alert.suppress.fields = device,fmg_server
+alert.suppress.period = 15m
+alert.expires = 24h
+
+action.slack = 1
+action.slack.param.channel = #network-alerts
+action.slack.param.attachment = none
+action.slack.param.message = $result.alert_title$
+action.slack.param.fields = device,fmg_server,sync_status,reason,install_target,config_revision,severity
+
+dispatch.rt_backfill = 1
+auto_summarize = 0
