--- a/security_alert/default/transforms.conf
+++ b/security_alert/default/transforms.conf
@@ -52,3 +52,6 @@ filename = traffic_spike_state_tracker.csv
 
 [license_state_tracker]
 filename = license_state_tracker.csv
+
+[fmg_sync_state_tracker]
+filename = fmg_sync_state_tracker.csv
