Restructure to user customization model (local/ directory)
Changes:
- Moved configs to local/ (savedsearches.conf, macros.conf, transforms.conf, alert_actions.conf)
- Removed unused lookups (auto_response_actions.csv, severity_priority.csv)
- Removed unused bin/ scripts (auto_validator.py, deployment_health_check.py, etc.)
- Kept only essential: slack.py, safe_fmt.py, six.py
- Kept only active state trackers (12 CSV files)

User Customization Model:
- local/ contains user configurations (takes precedence over default/)
- Cleaned up for deployment to existing Splunk app

--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -929,11 +929,13 @@ search = `fortigate_index` `logids_fmg_sync` \
 | `enrich_with_logid_lookup` \
 | eval device = coalesce(devname, "unknown") \
 | eval fmg_server = coalesce(fmg_server, remip, "unknown") \
+| eval raw_sync_status = coalesce(sync_status, "") \
 | eval sync_status = case( \
     like(msg, "%out of sync%") OR like(msg, "%not synchronized%"), "OUT_OF_SYNC", \
     like(msg, "%install%failed%"), "INSTALL_FAILED", \
     like(msg, "%install%success%") OR like(msg, "%synchronized%"), "SYNCHRONIZED", \
-    logid="0104043545", if(like(sync_status, "%fail%") OR like(sync_status, "%error%"), "SYNC_FAILED", "SYNC_OK"), \
+    logid="0104043545" AND (like(raw_sync_status, "%fail%") OR like(raw_sync_status, "%error%")), "SYNC_FAILED", \
+    logid="0104043545", "SYNC_OK", \
     true(), "UNKNOWN") \
 | eval config_revision = coalesce(config_revision, revision, "-") \
 | eval install_target = coalesce(install_target, adom, vdom, "-") \
