fix(deploy): add develop branch, fix operator precedence, remove python setup
CRITICAL FIXES:
- Fix #1: Add 'develop' to branches list in workflow trigger
  Enables dev deployments on develop branch pushes

MEDIUM FIXES:
- Fix #2: Fix operator precedence in deploy-prod if condition
  Changes: always() && condition1 || condition2 → always() && (condition1 || condition2)
  Prevents unintended prod triggers on all branches

LOW FIXES:
- Fix #3a: Remove unnecessary Python 3.9 setup from deploy-dev job
- Fix #3b: Remove unnecessary Python 3.9 setup from deploy-prod job
  Impact: Reduces CI/CD execution time by ~30 seconds each

Files modified: .github/workflows/deploy.yml (4 fixes, 13 lines changed)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ name: Deploy
 
 on:
   push:
-    branches: [master, main]
+    branches: [master, main, develop]
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+*'
   workflow_dispatch:
@@ -71,11 +71,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-
       - name: Deploy to dev
         run: |
           if [ -n "${{ secrets.SPLUNK_HOST }}" ]; then
@@ -98,16 +93,12 @@ jobs:
       url: https://splunk.jclee.me
     needs: [deploy-dev]
     if: |
-      always() &&
-      (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'prod') ||
-      (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
+      always() && (
+        (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'prod') ||
+        (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
+      )
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
 
       - name: Deploy to production
         run: |
