fix: Update CI workflow for security_alert app
- Create scripts/ci-validate-security-alert.sh: New validation script for security alert app
  * Validates security_alert app structure (not eventgen project)
  * Checks Python syntax for key scripts
  * Validates CSV lookup files (>= 10)
  * Verifies required configuration files
  * Checks documentation and workflows

- Fix .github/workflows/ci.yml:
  * Add submodules: false to checkout actions for cleaner clones
  * Update validation script reference (ci-validate.sh → ci-validate-security-alert.sh)
  * Add condition to validate-go job: if: hashFiles('go/go.sum') != ''
    (Skip validation if no Go code exists in repository)
  * Fix validate-docs job to check actual repository files:
    - Changed from checking non-existent doc paths (docs/guides/, runbooks/)
    - Now checks for README.md and security_alert/ directory
    - Aligned validation with actual security_alert app structure

Previously the CI/CD pipeline was failing because:
- ci-validate.sh checked for eventgen-specific files (wrong project type)
- validate-go job ran even though no Go code exists
- validate-docs job looked for files that don't exist

These fixes ensure the CI/CD pipeline validates the correct artifact (Splunk security_alert app)
and skips validation for languages/frameworks not used in this project.

Closes: Fix CI/CD workflow phase 2F

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: false
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -43,7 +45,7 @@ jobs:
         run: chmod -R +x scripts/*.sh tools/scripts/**/*.sh tests/integration/*.sh 2>/dev/null || true
 
       - name: Run CI validation
-        run: ./scripts/ci-validate.sh
+        run: ./scripts/ci-validate-security-alert.sh
 
       - name: Upload validation results
         uses: actions/upload-artifact@v4
@@ -65,26 +67,23 @@ jobs:
           echo "=== Docs Structure Validation ==="
           ERRORS=0
 
-          # Check required index files
-          for idx in docs/guides/README.md docs/deliverables/README.md runbooks/README.md; do
-            if [ ! -f "$idx" ]; then
-              echo "Missing: $idx"
+          # Check required documentation files
+          for doc in README.md; do
+            if [ ! -f "$doc" ]; then
+              echo "Missing: $doc"
               ERRORS=$((ERRORS + 1))
             else
-              echo "Found: $idx"
+              echo "Found: $doc"
             fi
           done
 
-          # Check AGENTS.md exists at key locations
-          echo ""
-          echo "=== AGENTS.md Files ==="
-          for loc in AGENTS.md go/internal/AGENTS.md python/AGENTS.md appserver/AGENTS.md; do
-            if [ -f "$loc" ]; then
-              echo "Found: $loc"
-            else
-              echo "Missing: $loc"
-            fi
-          done
+          # Check security_alert app exists
+          if [ ! -d "security_alert" ]; then
+            echo "Missing: security_alert/ app directory"
+            ERRORS=$((ERRORS + 1))
+          else
+            echo "Found: security_alert/ app directory"
+          fi
 
           if [ $ERRORS -gt 0 ]; then
             echo ""
@@ -112,9 +111,12 @@ jobs:
 
   validate-go:
     name: Validate Go
+    if: hashFiles('go/go.sum') != ''
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: false
 
       - name: Set up Go
         uses: actions/setup-go@v5
