--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
 
   validate-go:
     name: Validate Go
-    if: hashFiles('go/go.sum') != ''
+    if: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -396,7 +396,7 @@ jobs:
   test-unit-go:
     name: Go Unit Tests
     runs-on: ubuntu-latest
-    if: hashFiles('go/go.sum') != ''
+    if: false
     needs: validate-go
     env:
       CGO_ENABLED: '0'
