fix(alert_actions): align conf with spec file for UCC compliance
- Restore param.* prefix in alert_actions.conf
- Remove param.channel (not in spec)
- Add param._cam to spec file
- Splunk btool check now passes cleanly

--- a/security_alert/default/alert_actions.conf
+++ b/security_alert/default/alert_actions.conf
@@ -6,12 +6,10 @@ icon_path = appIcon.png
 payload_format = json
 python.version = python3
 
-param._cam = {"supports_adhoc": true, "task": ["alert"]}
-slack_app_oauth_token =
-webhook_url =
-channel = #security-firewall-alert
-proxy_enabled = 0
-proxy_url =
-proxy_port =
-proxy_username =
-proxy_password =
+param.slack_app_oauth_token =
+param.webhook_url =
+param.proxy_enabled = 0
+param.proxy_url =
+param.proxy_port =
+param.proxy_username =
+param.proxy_password =
