--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -257,6 +257,41 @@ jobs:
           retention-days: 7
           if-no-files-found: ignore
 
+  test-e2e:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    needs: validate-syntax
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: |
+          pip install pytest pytest-cov requests -q
+
+      - name: Run E2E tests (no live Splunk)
+        run: |
+          pytest tests/e2e/ -v --tb=short \
+            -m "not splunk_live" \
+            --cov=security_alert/bin --cov-report=xml:coverage-e2e.xml \
+            --cov-report=term 2>&1 | tee e2e-results.txt
+          exit ${PIPESTATUS[0]}
+
+      - name: Upload E2E results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: e2e-test-results
+          path: |
+            e2e-results.txt
+            coverage-e2e.xml
+          retention-days: 7
+          if-no-files-found: ignore
+
   test-integration:
     name: Integration Tests
     runs-on: ubuntu-latest
@@ -284,20 +319,44 @@ jobs:
   coverage-report:
     name: Coverage Report
     runs-on: ubuntu-latest
-    needs: [test-unit-python]
+    needs: [test-unit-python, test-e2e]
     if: always()
     steps:
-      - name: Download coverage
+      - name: Download unit test coverage
         uses: actions/download-artifact@v4
         with:
           name: python-coverage
-          path: .
+          path: ./unit
+        continue-on-error: true
+
+      - name: Download E2E test coverage
+        uses: actions/download-artifact@v4
+        with:
+          name: e2e-test-results
+          path: ./e2e
         continue-on-error: true
 
       - name: Summary
         run: |
-          if [ -f coverage-python.xml ]; then
-            echo "Python coverage: Available"
+          echo "## Test Coverage Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          if [ -f unit/coverage-python.xml ]; then
+            echo "✅ Python unit coverage: Available" >> $GITHUB_STEP_SUMMARY
           else
-            echo "Python coverage: Not available"
+            echo "⚠️ Python unit coverage: Not available" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          if [ -f e2e/coverage-e2e.xml ]; then
+            echo "✅ E2E test coverage: Available" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⚠️ E2E test coverage: Not available" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          if [ -f e2e/e2e-results.txt ]; then
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "### E2E Test Results" >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
+            tail -50 e2e/e2e-results.txt >> $GITHUB_STEP_SUMMARY
+            echo '```' >> $GITHUB_STEP_SUMMARY
           fi
