ci: use self-hosted runner for internal network deployments
- deploy-dev and deploy-prod jobs now use self-hosted runner
- Labels: self-hosted, linux, internal-network
- Runner installed on dev machine (rocky-dev)
- validate and package jobs remain on ubuntu-latest

--- a/.github/workflows/deploy-splunk-app.yml
+++ b/.github/workflows/deploy-splunk-app.yml
@@ -93,7 +93,7 @@ jobs:
 
   deploy-dev:
     name: Deploy to Dev (LXC 150)
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, internal-network]
     needs: package
     environment:
       name: splunk-dev
@@ -245,7 +245,7 @@ jobs:
 
   deploy-prod:
     name: Deploy to Production
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, internal-network]
     needs: [package, deploy-dev]
     environment:
       name: splunk-prod
