fix: replace print() with sys.stderr.write() in auto_validator.py
- Replaced 37 print() calls with sys.stderr.write() to comply with
  Splunk alert protocol (stdout reserved for Splunk protocol)
- Updated tarball creation to exclude __pycache__, *.pyc, .git, tests/
- Fixes AGENTS.md anti-pattern violation

--- a/.github/workflows/deploy-splunk-app.yml
+++ b/.github/workflows/deploy-splunk-app.yml
@@ -80,7 +80,12 @@ jobs:
         id: package
         run: |
           ARTIFACT_NAME="security_alert-${{ steps.version.outputs.version }}-${{ github.sha }}.tar.gz"
-          tar -czf "$ARTIFACT_NAME" security_alert/
+          tar -czf "$ARTIFACT_NAME" \
+            --exclude='__pycache__' \
+            --exclude='*.pyc' \
+            --exclude='.git' \
+            --exclude='tests/' \
+            security_alert/
           echo "artifact_name=$ARTIFACT_NAME" >> $GITHUB_OUTPUT
           ls -lh "$ARTIFACT_NAME"
 
