ci: add AppInspect workflow and optimize CI triggers
- Add appinspect.yml for Splunk app validation (required for Splunkbase)
  - Runs on security_alert/ changes and PRs to master/main
  - Supports precert and cloud modes via workflow_dispatch
  - Generates detailed results summary with pass/fail counts
  - Optional API validation with Splunk.com credentials

- Optimize ci.yml with paths-ignore for docs/wiki/markdown changes
- Optimize deploy.yml with paths-ignore for non-deployment files

This reduces unnecessary CI runs and adds mandatory AppInspect
validation for Splunkbase certification readiness.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,24 @@ name: CI
 "on":
   push:
     branches: [master, main, develop]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'splunk.wiki/**'
+      - '.github/ISSUE_TEMPLATE/**'
+      - '.github/PULL_REQUEST_TEMPLATE/**'
+      - 'LICENSE'
+      - '.gitignore'
   pull_request:
     branches: [master, main, develop]
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
+      - 'splunk.wiki/**'
+      - '.github/ISSUE_TEMPLATE/**'
+      - '.github/PULL_REQUEST_TEMPLATE/**'
+      - 'LICENSE'
+      - '.gitignore'
 
 env:
   SPLUNK_HOME: /opt/splunk
