fix(ci): fix splunk-appinspect version check
splunk-appinspect doesn't support --version flag, use 'list checks' instead

--- a/.github/workflows/appinspect.yml
+++ b/.github/workflows/appinspect.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Install AppInspect
         run: |
           pip install splunk-appinspect --quiet
-          splunk-appinspect --version
+          splunk-appinspect list checks | head -5 || echo "AppInspect installed"
 
       - name: Run AppInspect
         id: appinspect
