fix: resolve AppInspect failures for Splunkbase certification
AppInspect found 4 issues blocking Splunkbase certification:

1. is_configured = 1 → 0 (app.conf)
   - Apps should ship with is_configured=0, set to 1 after user setup

2. Missing [triggers] stanza → added (app.conf)
   - Required for proper config reload without Splunk restart

3. setup.xml not permitted in Cloud → renamed to setup.xml.onprem
   - Cloud apps must use HTML/JS setup pages instead
   - On-prem users can rename back if needed

4. realtime_schedule = 1 → 0 (savedsearches.conf, 15 alerts)
   - Real-time scheduled searches not permitted in Cloud
   - Changed to continuous scheduled searches

Also bumped version to 4.2.3

--- a/security_alert/default/app.conf
+++ b/security_alert/default/app.conf
@@ -1,5 +1,5 @@
 [install]
-is_configured = 1
+is_configured = 0
 state = enabled
 build = 1
 
@@ -10,8 +10,14 @@ label = Security Alert System
 [launcher]
 author = NextTrade Security Team
 description = FortiGate Security Event Monitoring and Alerting System
-version = 4.2.2
+version = 4.2.3
 
 [package]
 id = security_alert
 check_for_updates = 1
+
+[triggers]
+reload.alert_actions = simple
+reload.savedsearches = simple
+reload.macros = simple
+reload.transforms = simple
