fix: resolve remaining AppInspect failures
1. Remove Splunk built-in confs from [triggers] stanza
   - Only custom confs (eventgen.conf) should be in triggers
   - Built-in confs (savedsearches, macros, etc.) auto-reload

2. Convert real-time dispatch times to relative times
   - rt-10m → -10m, rt-5m → -5m
   - rt → now
   - Real-time searches are not permitted in Splunk Cloud

AppInspect failures: 4 → 3 → 0 (expected)

--- a/security_alert/default/app.conf
+++ b/security_alert/default/app.conf
@@ -17,7 +17,4 @@ id = security_alert
 check_for_updates = 1
 
 [triggers]
-reload.alert_actions = simple
-reload.savedsearches = simple
-reload.macros = simple
-reload.transforms = simple
+reload.eventgen = simple
