--- a/security_alert/default/savedsearches.conf
+++ b/security_alert/default/savedsearches.conf
@@ -46,8 +46,8 @@ search = `fortigate_index` `logids_config_change` \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-10m
-dispatch.latest_time = rt
+dispatch.earliest_time = -10m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 4
 alert.digest_mode = 0
@@ -102,8 +102,8 @@ search = `fortigate_index` `logids_hardware_failure` \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-5m
-dispatch.latest_time = rt
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 5
 alert.digest_mode = 0
@@ -147,8 +147,8 @@ search = `fortigate_index` (logid=0103040014 OR logid=0103040015) \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-5m
-dispatch.latest_time = rt
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 3
 alert.digest_mode = 0
@@ -200,8 +200,8 @@ search = `fortigate_index` `logids_ha_state` \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-10m
-dispatch.latest_time = rt
+dispatch.earliest_time = -10m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 4
 alert.digest_mode = 0
@@ -259,8 +259,8 @@ search = `fortigate_index` `logids_resource_limit` \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-5m
-dispatch.latest_time = rt
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 5
 alert.digest_mode = 0
@@ -311,8 +311,8 @@ search = `fortigate_index` `logids_admin_login` \
 cron_schedule = * * * * *
 enableSched = 0
 realtime_schedule = 0
-dispatch.earliest_time = rt-5m
-dispatch.latest_time = rt
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 5
 alert.digest_mode = 0
@@ -357,8 +357,8 @@ search = `fortigate_index` `logids_link_monitor` \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-10m
-dispatch.latest_time = rt
+dispatch.earliest_time = -10m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 4
 alert.digest_mode = 0
@@ -403,8 +403,8 @@ search = `fortigate_index` `logids_link_monitor` \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-10m
-dispatch.latest_time = rt
+dispatch.earliest_time = -10m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 3
 alert.digest_mode = 0
@@ -457,8 +457,8 @@ search = `fortigate_index` `logids_vpn_tunnel` \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-5m
-dispatch.latest_time = rt
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 5
 alert.digest_mode = 0
@@ -504,8 +504,8 @@ search = `fortigate_index` (logid=0101037125 OR logid=0101037132) \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-5m
-dispatch.latest_time = rt
+dispatch.earliest_time = -5m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 5
 alert.digest_mode = 0
@@ -551,8 +551,8 @@ search = `fortigate_index` `logids_cpu_memory` \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-10m
-dispatch.latest_time = rt
+dispatch.earliest_time = -10m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 4
 alert.digest_mode = 0
@@ -608,8 +608,8 @@ search = `fortigate_index` `logids_ssl_vpn_failed` earliest=rt-10m latest=rt \
 cron_schedule = * * * * *
 enableSched = 0
 realtime_schedule = 0
-dispatch.earliest_time = rt-10m
-dispatch.latest_time = rt
+dispatch.earliest_time = -10m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 4
 alert.digest_mode = 0
@@ -667,8 +667,8 @@ search = `fortigate_index` `logids_traffic` earliest=rt-35m latest=rt \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-10m
-dispatch.latest_time = rt
+dispatch.earliest_time = -10m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 4
 alert.digest_mode = 0
@@ -711,8 +711,8 @@ search = `fortigate_index` `logids_system_reboot` earliest=rt-10m latest=rt \
 cron_schedule = * * * * *
 enableSched = 1
 realtime_schedule = 0
-dispatch.earliest_time = rt-10m
-dispatch.latest_time = rt
+dispatch.earliest_time = -10m
+dispatch.latest_time = now
 alert.track = 1
 alert.severity = 4
 alert.digest_mode = 0
