feat: Add dashboard E2E tests and CI/CD pipeline improvements
- Add test_dashboard_xml.py with 107 tests for dashboard validation
- Add test_backend_api.py, test_domains.py, test_health_metrics.py, test_integration_connectors.py
- Fix fortigate-production-alerts-dashboard.xml L396 latest token typo
- Unify theme to dark in alert-management and data-explorer dashboards
- Update requirements.txt with dev dependencies (pytest, black, flake8)
- Add dashboard marker to pytest.ini
- Add frontend/AGENTS.md knowledge base

Total: 740 E2E tests passing

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,11 @@ markers =
     slow: mark test as slow running
     alert: mark test as alert-specific
     frontend: mark test as requiring frontend dev server (React)
+    backend: mark test as requiring backend server
+    integration: mark test as integration connector test
+    domain: mark test as domain layer test
+    bin_scripts: mark test as bin scripts behavior test
+    dashboard: mark test as dashboard XML validation test
 
 addopts =
     -v
