chore: gitignore .sisyphus/ and in-memoria-vectors.db/
Remove AI-generated plan files and In-Memoria vector database
from git tracking. These were causing pre-commit trailing-whitespace
hook failures in CI.

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,10 @@ wrangler.toml.bak
 
 # Development tools
 .serena/
+.sisyphus/
+
+# AI/ML databases
+in-memoria-vectors.db/
 
 # Temporary files
 tmp/
