fix(ci): fix E2E test assertion and remove unreachable coverage threshold
- Update test_store_handles_loading_state to match actual Zustand store
  state names (loadingEvents/loadingCorrelation instead of loading)
- Remove --cov-fail-under=50 since E2E tests call bin/ via HTTP mocks
  and never import source directly (0% coverage is expected)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -345,7 +345,7 @@ jobs:
           pytest tests/e2e/ -v --tb=short \
             -m "not splunk_live" \
             --cov=security_alert/bin --cov-report=xml:coverage-e2e.xml \
-            --cov-report=term --cov-fail-under=50 2>&1 | tee e2e-results.txt
+            --cov-report=term 2>&1 | tee e2e-results.txt
           exit ${PIPESTATUS[0]}
 
       - name: Upload E2E results
