chore: remove legacy directories and clean up project structure
Remove archived/, infra/, tools/, plugins/, terraform/, lookups/,
in-memoria.db, docs/PROJECT-STRUCTURE.md (~21MB, 42 files).

- archived/: past scheduled deletion date (2025-12-31)
- infra/, tools/: duplicated by scripts/
- plugins/: binary tgz files, should not be in git
- terraform/: contained .terraform/ binaries and terraform.tfstate secrets
- lookups/: root-level threat intel CSVs (dynamically generated)
- in-memoria.db: unrelated AI/vector database

Also:
- Remove orphaned start:legacy script from package.json (index.js deleted)
- Fix .gitignore: split malformed line, add terraform/docker/db patterns
- Remove deleted tools/ path reference from ci.yml
- Update AGENTS.md: remove legacy entry point, add unit test command

--- a/.gitignore
+++ b/.gitignore
@@ -71,13 +71,46 @@ temp/
 # Large files
 *.zip
 *.tar.gz
-*.rar*.pyc
+*.rar
+
+# Python
+*.pyc
 __pycache__/
-logs/
+.venv/
+
+# Logs (duplicate removed)
+# logs/ already listed above
+
+# Release artifacts
 release/*.tar.gz
 release/*.tgz
-.venv/
 
 # Terraform
 *.tfvars
 !*.tfvars.example
+terraform/.terraform/
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+
+# Database files
+in-memoria.db
+
+# Docker
+.docker-context
+
+# Test artifacts
+.coverage
+.pytest_cache/
+terraform/.terraform/
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+
+# Database files
+in-memoria.db
+
+# Docker
+.docker-context
+
+# Test artifacts
+.coverage
+.pytest_cache/
