--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           cache: 'pip'
 
       - name: Make scripts executable
-        run: chmod -R +x scripts/*.sh tools/scripts/**/*.sh tests/integration/*.sh 2>/dev/null || true
+        run: chmod -R +x scripts/*.sh tests/integration/*.sh 2>/dev/null || true
 
       - name: Run CI validation
         run: |
@@ -318,8 +318,41 @@ jobs:
           retention-days: 30
           if-no-files-found: ignore
 
-  # NOTE: test-unit-python job removed — tests/unit/ directory does not exist
-  # TODO: Create tests/unit/ with pytest tests and re-enable this job
+  test-unit:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    needs: [validate-syntax, validate-pre-commit]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: false
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+          cache: 'pip'
+
+      - name: Install dependencies
+        run: |
+          pip install pytest pytest-cov -q
+
+      - name: Run unit tests
+        run: |
+          pytest tests/unit/ -v --tb=short \
+            --cov=security_alert/bin --cov-report=xml:coverage-unit.xml \
+            --cov-report=term 2>&1 | tee unit-results.txt
+          exit ${PIPESTATUS[0]}
+
+      - name: Upload unit test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: unit-test-results
+          path: |
+            unit-results.txt
+            coverage-unit.xml
+          retention-days: 7
 
   test-e2e:
     name: E2E Tests
