refactor: organize scripts/ into categorized subdirectories
Move 80 flat scripts into 11 categorized subdirectories:
deploy/, validate/, diagnose/, cleanup/, test/, slack/,
intel/, fortigate/, generate/, setup/, util/

Update all cross-references:
- CI workflows (ci.yml, deploy-splunk-app.yml)
- package.json deploy:dashboards script
- Root AGENTS.md and scripts/AGENTS.md
- Internal script cross-references (QUICK-TEST, start-demo,
  verify-splunk-deployment, ci-validate)

Fix pre-existing broken references:
- auto-sync-airgap.sh: exec to deleted tools/ path
- ci-validate.sh: references to never-created scripts
- start-demo.sh: reference to deleted export-dashboards.js

Remove false AGENTS.md known issues:
- fortigate_auto_response.py already uses env vars
- domains/ already has barrel export, backend/ uses server.js

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,11 +48,11 @@ jobs:
           cache: 'pip'
 
       - name: Make scripts executable
-        run: chmod -R +x scripts/*.sh tests/integration/*.sh 2>/dev/null || true
+        run: find scripts -name "*.sh" -exec chmod +x {} + && chmod +x tests/integration/*.sh 2>/dev/null || true
 
       - name: Run CI validation
         run: |
-          ./scripts/ci-validate-security-alert.sh | tee ci-validate-results.txt
+          ./scripts/validate/ci-validate-security-alert.sh | tee ci-validate-results.txt
           exit ${PIPESTATUS[0]}
 
       - name: Upload validation results
