chore: remove legacy files and unused Cloudflare Worker integration
Remove 73 tracked files:
- .claude/ (unused Claude Code settings)
- worker/ + wrangler.toml (superseded by backend/server.js)
- security_alert_user/ (non-functional user-level deploy variant)
- ansible/ (hardcoded credentials, outdated 3-alert playbook)
- configs/archive-all/ (45 legacy dashboard files from Oct 2025)

Also clean package.json (remove wrangler scripts/devDep),
deduplicate .gitignore, and add .claude/ to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ wrangler.toml.bak
 # Development tools
 .serena/
 .sisyphus/
+.claude/
 
 # AI/ML databases
 in-memoria-vectors.db/
@@ -88,19 +89,6 @@ release/*.tgz
 # Terraform
 *.tfvars
 !*.tfvars.example
-terraform/.terraform/
-terraform/terraform.tfstate
-terraform/terraform.tfstate.backup
-
-# Database files
-in-memoria.db
-
-# Docker
-.docker-context
-
-# Test artifacts
-.coverage
-.pytest_cache/
 terraform/.terraform/
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
