chore: standardize dependabot commit prefix to chore(deps)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
       - dependencies
       - ci
     commit-message:
-      prefix: "ci(deps)"
+      prefix: "chore(deps)"
 
   # Python dependencies
   - package-ecosystem: pip
@@ -36,4 +36,4 @@ updates:
       - dependencies
       - docker
     commit-message:
-      prefix: "chore(docker)"
+      prefix: "chore(deps)"
